--- a/package.json
+++ b/package.json
@@ -28,6 +28,16 @@
     "@angular/forms": "^20.3.0",
     "@angular/platform-browser": "^20.3.0",
     "@angular/router": "^20.3.0",
+    "@primeuix/themes": "^1.2.5",
+    "angular-plotly.js": "^20.0.0",
+    "chart.js": "^4.5.1",
+    "chartjs-chart-geo": "^4.3.6",
+    "chartjs-plugin-datalabels": "^2.2.0",
+    "ng2-charts": "^8.0.0",
+    "plotly.js-basic-dist": "^3.1.2",
+    "plotly.js-dist": "^2.27.1",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
@@ -36,6 +46,8 @@
     "@angular/cli": "^20.3.6",
     "@angular/compiler-cli": "^20.3.0",
     "@types/jasmine": "~5.1.0",
+    "@types/plotly.js": "^3.0.7",
+    "@types/plotly.js-basic-dist": "^1.54.4",
     "jasmine-core": "~5.9.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
