--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "ng2-charts": "^8.0.0",
     "plotly.js-basic-dist": "^3.1.2",
     "plotly.js-dist": "^2.27.1",
+    "plotly.js-dist-min": "^3.2.0",
     "primeicons": "^7.0.0",
     "primeng": "^20.2.0",
     "rxjs": "~7.8.0",
